parser.js
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Program: peg$parseProgram },
        peg$startRuleFunction  = peg$parseProgram,

        peg$c0 = peg$otherExpectation("Program"),
        peg$c1 = function(lines) {
        		return lines.map(e => {
        			return e[1];
        		}).reduce((start, term) => {
        			return start.concat(term);
        		})
        	},
        peg$c2 = peg$otherExpectation("Line"),
        peg$c3 = ";",
        peg$c4 = peg$literalExpectation(";", false),
        peg$c5 = function(e) { return e },
        peg$c6 = peg$otherExpectation("Statement"),
        peg$c7 = function(e) { return [{
        		color: "#c74440",
        		id: DesLang.genId(),
        		latex: e,
        		type: "expression",
        	}]},
        peg$c8 = peg$otherExpectation("FolderLine"),
        peg$c9 = peg$otherExpectation("FolderStatement"),
        peg$c10 = function(e) { return {
        		color: "#c74440",
        		id: DesLang.genId(),
        		latex: e,
        		type: "expression",
        	}},
        peg$c11 = peg$otherExpectation("List"),
        peg$c12 = "[",
        peg$c13 = peg$literalExpectation("[", false),
        peg$c14 = ",",
        peg$c15 = peg$literalExpectation(",", false),
        peg$c16 = "]",
        peg$c17 = peg$literalExpectation("]", false),
        peg$c18 = function(e) {
        		//return [e.filter(k => k != "")[0], ...e.filter(k => k != "")[1].map(j => j.filter(k => k != ""))]
        		return ll + ([e.filter(k => k != "")[0], ...e.filter(k => k != "")[1].map(j => j.filter(k => k != ""))]).reduce((start, term) => {
        			return start + "," + term[1]
        		}) + lr;
        	},
        peg$c19 = peg$otherExpectation("Point"),
        peg$c20 = "(",
        peg$c21 = peg$literalExpectation("(", false),
        peg$c22 = ")",
        peg$c23 = peg$literalExpectation(")", false),
        peg$c24 = function(x, y) { return pl + x + "," + y + pr },
        peg$c25 = peg$otherExpectation("Function"),
        peg$c26 = function(func, e) { return DesLang.createFunction([func, pl, e, pr]) },
        peg$c27 = function(func, e) { return DesLang.createFunction([func, pl, ...[e[1]].concat(e.filter(e => e != "")[1].map(e => e[2])), pr]) },
        peg$c28 = function(func) { return DesLang.createFunction([func, pl, pr])},
        peg$c29 = peg$otherExpectation("Folder"),
        peg$c30 = "folder",
        peg$c31 = peg$literalExpectation("folder", false),
        peg$c32 = "{",
        peg$c33 = peg$literalExpectation("{", false),
        peg$c34 = "}",
        peg$c35 = peg$literalExpectation("}", false),
        peg$c36 = function(name, contents) { 
        	var id = DesLang.genId();
        	contents.forEach(e => {e = e[0]; e.folderId = id})
        	return [{ 
        		title: name, 
        		id,
        		type: "folder"
        	}, ...contents.map(e => e[0])]},
        peg$c37 = "=",
        peg$c38 = peg$literalExpectation("=", false),
        peg$c39 = "=>",
        peg$c40 = peg$literalExpectation("=>", false),
        peg$c41 = function(head, tail) {
        		var setup = [head, ...tail.map(e => e.filter(k => k != ""))];
        		return setup.reduce((start, term) => {
        			return DesLang.createBinary(start, term[1], term[0]) 
        		})
        	},
        peg$c42 = "&&",
        peg$c43 = peg$literalExpectation("&&", false),
        peg$c44 = "||",
        peg$c45 = peg$literalExpectation("||", false),
        peg$c46 = "==",
        peg$c47 = peg$literalExpectation("==", false),
        peg$c48 = "!=",
        peg$c49 = peg$literalExpectation("!=", false),
        peg$c50 = "<=",
        peg$c51 = peg$literalExpectation("<=", false),
        peg$c52 = ">=",
        peg$c53 = peg$literalExpectation(">=", false),
        peg$c54 = "<",
        peg$c55 = peg$literalExpectation("<", false),
        peg$c56 = ">",
        peg$c57 = peg$literalExpectation(">", false),
        peg$c58 = "+",
        peg$c59 = peg$literalExpectation("+", false),
        peg$c60 = "-",
        peg$c61 = peg$literalExpectation("-", false),
        peg$c62 = "^",
        peg$c63 = peg$literalExpectation("^", false),
        peg$c64 = "&",
        peg$c65 = peg$literalExpectation("&", false),
        peg$c66 = "|",
        peg$c67 = peg$literalExpectation("|", false),
        peg$c68 = "<<",
        peg$c69 = peg$literalExpectation("<<", false),
        peg$c70 = ">>",
        peg$c71 = peg$literalExpectation(">>", false),
        peg$c72 = "*",
        peg$c73 = peg$literalExpectation("*", false),
        peg$c74 = "/",
        peg$c75 = peg$literalExpectation("/", false),
        peg$c76 = "%",
        peg$c77 = peg$literalExpectation("%", false),
        peg$c78 = "**",
        peg$c79 = peg$literalExpectation("**", false),
        peg$c80 = function(head, tail) {
        		var setup = [...head.map(e => e.filter(k => k != "")), tail];
        		return setup.reverse().reduce((start, term) => {
        			return DesLang.createBinary(term[0], start, term[1]) 
        		})
        	},
        peg$c81 = "~",
        peg$c82 = peg$literalExpectation("~", false),
        peg$c83 = "!",
        peg$c84 = peg$literalExpectation("!", false),
        peg$c85 = "@",
        peg$c86 = peg$literalExpectation("@", false),
        peg$c87 = function(head, tail) {
        		var setup = [...head, tail];
        		return setup.reverse().reduce((start, term) => {
        			return DesLang.createUnary(start, term[0]) 
        		})
        	},
        peg$c88 = peg$otherExpectation("Term"),
        peg$c89 = function(e) { return [pl, e, pr].join("") },
        peg$c90 = function(e) { return "-" + e },
        peg$c91 = function(v) { return DesLang.testKeyword(v) },
        peg$c92 = peg$otherExpectation("Number"),
        peg$c93 = "0x",
        peg$c94 = peg$literalExpectation("0x", false),
        peg$c95 = function(digits) { return String(parseInt(digits.join(""), 16))},
        peg$c96 = "0b",
        peg$c97 = peg$literalExpectation("0b", false),
        peg$c98 = function(digits) { return String(parseInt(digits.join(""), 2))},
        peg$c99 = ".",
        peg$c100 = peg$literalExpectation(".", false),
        peg$c101 = function(d1, d2) { return String(parseFloat(d1.join("") + "." + d2.join(""), 10))},
        peg$c102 = function(digits) { return String(parseInt(digits.join(""), 10))},
        peg$c103 = /^[0-9]/,
        peg$c104 = peg$classExpectation([["0", "9"]], false, false),
        peg$c105 = /^[0-9a-fA-F]/,
        peg$c106 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
        peg$c107 = /^[01]/,
        peg$c108 = peg$classExpectation(["0", "1"], false, false),
        peg$c109 = peg$otherExpectation("Variable"),
        peg$c110 = /^[a-zA-Z]/,
        peg$c111 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
        peg$c112 = /^[A-Za-z0-9]/,
        peg$c113 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"]], false, false),
        peg$c114 = function(v, v2) { return v + v2.join("") },
        peg$c115 = peg$otherExpectation("Text"),
        peg$c116 = /^[A-Za-z0-9 ]/,
        peg$c117 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], " "], false, false),
        peg$c118 = function(e) { return e.join("") },
        peg$c119 = /^[ \t\r\n]/,
        peg$c120 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),
        peg$c121 = function() {return ""},

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseProgram() {
      var s0, s1, s2, s3, s4, s5;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parse_();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseLine();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          if (s5 !== peg$FAILED) {
            s3 = [s3, s4, s5];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$currPos;
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseLine();
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s3 = [s3, s4, s5];
                s2 = s3;
              } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1);
      }
      s0 = s1;
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c0); }
      }

      return s0;
    }

    function peg$parseLine() {
      var s0, s1, s2, s3;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parseStatement();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 59) {
            s3 = peg$c3;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c4); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c5(s1);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }

      return s0;
    }

    function peg$parseStatement() {
      var s0, s1;

      peg$silentFails++;
      s0 = peg$parseFolder();
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseExpr0();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c7(s1);
        }
        s0 = s1;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }

      return s0;
    }

    function peg$parseFolderLine() {
      var s0, s1, s2, s3;
